--- a/argocd-vcluster/Makefile
+++ b/argocd-vcluster/Makefile
@@ -1,6 +1,7 @@
 run:
-	crossplane render --verbose -e extra-resources xr.yaml composition.yaml functions.yaml -r
+# 	crossplane render --verbose -r xr.yaml composition.yaml functions.yaml
+	crossplane render --verbose -o observed -r xr.yaml composition.yaml functions.yaml
 
 validate:
-	crossplane render -e extra-resources xr.yaml composition.yaml functions.yaml -x | \
+	crossplane render -o observed -x xr.yaml composition.yaml functions.yaml | \
 	crossplane beta validate ../infra/providers/,xrd.yaml -
