--- a/argocd-vcluster.bak/functions.yaml
+++ b/argocd-vcluster.bak/functions.yaml
@@ -9,6 +9,13 @@ spec:
 apiVersion: pkg.crossplane.io/v1beta1
 kind: Function
 metadata:
+  name: function-extra-resources
+spec:
+  package: ghcr.io/joebowbeer/crossplane-function-extra-resources:v0.1.1
+---
+apiVersion: pkg.crossplane.io/v1beta1
+kind: Function
+metadata:
   name: function-go-templating
 spec:
   package: xpkg.upbound.io/crossplane-contrib/function-go-templating:v0.10.0
