--- a/pythonic-vcluster/xrd.yaml
+++ b/pythonic-vcluster/xrd.yaml
@@ -1,15 +1,13 @@
-apiVersion: apiextensions.crossplane.io/v1
+apiVersion: apiextensions.crossplane.io/v2
 kind: CompositeResourceDefinition
 metadata:
-  name: xclusters.cnp.example.org
+  name: xclusters.example.joebowbeer.com
 spec:
-  group: cnp.example.org
+  group: example.joebowbeer.com
   names:
     kind: XCluster
     plural: xclusters
-  claimNames:
-    kind: Cluster
-    plural: clusters
+  scope: Cluster
   versions:
   - name: v1alpha1
     served: true
