--- a/k8s/xrd.yaml
+++ b/k8s/xrd.yaml
@@ -1,12 +1,12 @@
 apiVersion: apiextensions.crossplane.io/v2
 kind: CompositeResourceDefinition
 metadata:
-  name: xclusters.example.joebowbeer.com
+  name: vclusters.example.joebowbeer.com
 spec:
   group: example.joebowbeer.com
   names:
-    kind: XCluster
-    plural: xclusters
+    kind: VCluster
+    plural: vclusters
   scope: Cluster
   versions:
   - name: v1alpha1
