--- a/.devcontainer/crossplane-cli/devcontainer.json
+++ b/.devcontainer/crossplane-cli/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "crossplane-cli",
-    "image": "mcr.microsoft.com/devcontainers/go:1-1.24-bookworm",
+    "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm",
     "features": {
         "ghcr.io/devcontainers/features/docker-in-docker:2": {
             "version": "latest",
@@ -10,7 +10,18 @@
         "ghcr.io/joebowbeer/devcontainers-features/crossplane:1": {
             "channel": "stable",
             "version": "current"
+        },
+        "ghcr.io/jsburckhardt/devcontainer-features/ruff:1": {},
+        "ghcr.io/rio/features/kustomize:1": {},
+        "ghcr.io/va-h/devcontainers-features/uv:1": {}
+    },
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "charliermarsh.ruff",
+                "kevinrose.vsc-python-indent",
+                "ms-python.python"
+            ]
         }
     }
 }
-
