--- a/.devcontainer/kind/devcontainer.json
+++ b/.devcontainer/kind/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "kind",
-    "image": "mcr.microsoft.com/devcontainers/go:1-1.24-bookworm",
+    "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm",
     "features": {
         "ghcr.io/devcontainers/features/docker-in-docker:2": {
             "version": "latest",
@@ -19,9 +19,20 @@
         "ghcr.io/devcontainers-extra/features/kind:1": {
             "version": "latest"
         },
+        "ghcr.io/jsburckhardt/devcontainer-features/ruff:1": {},
         "ghcr.io/rio/features/k9s:1": {},
-        "ghcr.io/rio/features/vcluster:1": {}
+        "ghcr.io/rio/features/kustomize:1": {},
+        "ghcr.io/rio/features/vcluster:1": {},
+        "ghcr.io/va-h/devcontainers-features/uv:1": {}
+    },
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "charliermarsh.ruff",
+                "kevinrose.vsc-python-indent",
+                "ms-python.python"
+            ]
+        }
     },
     "postCreateCommand": "bash scripts/devtools_provision.sh"
 }
-
