--- a/k8s/functions.yaml
+++ b/k8s/functions.yaml
@@ -3,6 +3,8 @@ apiVersion: pkg.crossplane.io/v1beta1
 kind: Function
 metadata:
   name: function-pythonic
+  annotations:
+    render.crossplane.io/runtime: Development
 spec:
   package: ghcr.io/fortra/function-pythonic:v0.0.7
 #   runtimeConfigRef:
