--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [project]
-name = "inline"
+name = "crossplane-playground"
 version = "0.1.0"
+description = "Crossplane playground"
+readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "crossplane-function-pythonic>=0.0.7.post3",
