--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "crossplane-playground"
-version = "0.1.0"
+version = "0.2.0"
 description = "Crossplane playground"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "crossplane-function-pythonic>=0.0.9.post0",
+    "crossplane-function-pythonic>=0.0.10",
 ]
