--- a/.devcontainer/crossplane-cli/devcontainer.json
+++ b/.devcontainer/crossplane-cli/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "crossplane-cli",
-    "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm",
+    "image": "mcr.microsoft.com/devcontainers/python:3-3.14-trixie",
     "features": {
         "ghcr.io/devcontainers/features/docker-in-docker:2": {
             "version": "latest",
