--- a/k8s/functions.yaml
+++ b/k8s/functions.yaml
@@ -1,12 +1,12 @@
 ---
-apiVersion: pkg.crossplane.io/v1beta1
+apiVersion: pkg.crossplane.io/v1
 kind: Function
 metadata:
   name: function-pythonic
   annotations:
     render.crossplane.io/runtime: Development
 spec:
-  package: ghcr.io/fortra/function-pythonic:v0.1.0
+  package: xpkg.upbound.io/crossplane-contrib/function-pythonic:v0.1.5
 #   runtimeConfigRef:
 #     name: debug
 # ---
