--- a/.devcontainer/crossplane-cli/devcontainer.json
+++ b/.devcontainer/crossplane-cli/devcontainer.json
@@ -20,7 +20,8 @@
             "extensions": [
                 "charliermarsh.ruff",
                 "kevinrose.vsc-python-indent",
-                "ms-python.python"
+                "ms-python.python",
+                "the0807.uv-toolkit"
             ]
         }
     }
