--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
             "extensions": [
                 "charliermarsh.ruff",
                 "kevinrose.vsc-python-indent",
-                "ms-python.python"
+                "ms-python.python",
+                "the0807.uv-toolkit"
             ]
         }
     }
